# muster

./: .gitignore  .golangci.yml  .goreleaser.ci.yaml  .goreleaser.yaml  .pre-commit-config.yaml  .release-please-manifest.json  .yamllint  CHANGELOG.md  CLAUDE.md  CODEOWNERS  Dockerfile  Dockerfile.alpine  Dockerfile.musterstdio  Makefile  Makefile.crd.mk  Makefile.custom.mk  README.md  cliff.toml  go.mod  go.sum  main.go  main_test.go  muster.service  muster.socket  release-please-config.json  renovate.json5  schema.json  test_workflow_attributes_removal.go
.abs/: main.yaml
.ats/: main.yaml
.circleci/: config.yml  custom.yml  workflows.yml
.github/: .gitleaks.toml  pull_request_template.md
.klaus/: last-result.json
.muster/: README-capabilities.md  README-serviceclass.md  README-workflows.md  config.yaml.example
cmd/: agent.go  agent_test.go  auth.go  auth_helpers.go  auth_helpers_test.go  auth_login.go  auth_login_test.go  auth_status.go  auth_status_test.go  auth_test.go  call.go  call_test.go  check.go  context.go  context_test.go  create.go  events.go  events_test.go  get.go  list.go  list_test.go  mcp_types.go  root.go  root_test.go  selfupdate.go  selfupdate_test.go  serve.go  standalone.go  start.go  stop.go  test.go  version.go  version_test.go
docs/: README.md  muster-agent.json  oauth-client.json
examples/: mcpserver-example.yaml  serviceclass-complex-example.yaml  serviceclass-example.yaml  (+2 more)
tests/ats/: Pipfile  ats_test.go  cluster_test.go  deployment_test.go  go.mod  helpers_test.go  pre-deploy.sh  pyproject.toml  test_basic_cluster.py
(+1223 files in other folders)
